--- a/.config/hammerspoon/config/uielements.html
+++ b/.config/hammerspoon/config/uielements.html
@@ -22,9 +22,14 @@
                 color: white;
             }
 
-            table.path td {
+            /* table.path td {
                 padding-left: 5px;
                 padding-right: 5px;
+            } */
+
+            table.path th:nth-child(1),
+            table.path td:nth-child(1) {
+                text-align: left;
             }
 
             table.path th:nth-child(4),
