--- a/.config/hammerspoon/config/uielements.html
+++ b/.config/hammerspoon/config/uielements.html
@@ -37,6 +37,10 @@
                 padding-left: 10px;
                 text-align: left;
             }
+
+            span.not-set-attribute {
+                color: #999;
+            }
         </style>
     </head>
 </html>
