emphasize some attrs

--- a/.config/hammerspoon/config/uielements.html
+++ b/.config/hammerspoon/config/uielements.html
@@ -41,6 +41,10 @@
             span.not-set-attribute {
                 color: #999;
             }
+
+            span.axtitle {
+                font-weight: bold;
+            }
         </style>
     </head>
 </html>
