make path/toplevel elements stand out easily even if text wraps columns

--- a/.config/hammerspoon/config/uielements.html
+++ b/.config/hammerspoon/config/uielements.html
@@ -17,6 +17,13 @@
                 background-color: #f2f2f2;
             }
 
+            table.path tr.toplevel td:nth-child(1) {
+                font-weight: bold;
+            }
+            table.path tr.indented td:nth-child(1) {
+                padding-left: 20px;
+            }
+
             table.path th {
                 background-color: #4caf50;
                 color: white;
